--- a/index.less
+++ b/index.less
@@ -9,7 +9,7 @@
   z-index: 100000;
 
   line-height: 1.2;
-  font-family: @player-font;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 .error {
