--- a/index.less
+++ b/index.less
@@ -1,3 +1,4 @@
+
 .cp-alert-container {
   position: fixed;
   top: 1em;
@@ -8,6 +9,7 @@
   z-index: 100000;
   line-height: 1.2;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: #333;
 }
 
 .cp-alert {
