works with new Figure arrangement

--- a/index.less
+++ b/index.less
@@ -10,6 +10,7 @@
   line-height: 1.2;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #333;
+  z-index: 1000000000;
 }
 
 .cp-alert {
@@ -20,6 +21,7 @@
   border-radius: 0.2em;
   animation: 300ms cp-fade-in linear;
   overflow: hidden;
+  box-shadow: 3px 3px 24px 0px rgba(0,0,0,0.2);
 }
 
 .cp-alert.info {
@@ -35,6 +37,7 @@
 .cp-alert .cp-heading {
   margin-bottom: 0.8em;
   font-size: 1.4em;
+  font-weight: 700;
 }
 
 .alert .cp-message {
